# wlgreet-smallbox

./: .build.yml  Cargo.toml  README.md  config.json  config.toml
src/: app.rs  buffer.rs  cmd.rs  config.rs  doublemempool.rs  draw.rs  main.rs  widget.rs
src/widgets/: login.rs
