[package]
name = "wlgreet"
version = "0.4.0"
authors = ["Kenny Levinsen <kl@kl.wtf>"]
edition = "2018"

[profile.release]
lto = "fat"

[features]
damage_debug = []

[dependencies]
smithay-client-toolkit = "0.15.2"
rusttype = "0.9"
chrono = "0.4"
nix = "0.25"
memmap2 = "0.3"
os_pipe = "1.1"
wayland-client = { version = "0.29" }
wayland-protocols = { version = "0.29", features = ["client", "unstable_protocols"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
greetd_ipc = { version = "0.9", features = ["sync-codec"] }
getopts = "0.2"
toml = "0.5"
